messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app-blue
  template:
    metadata:
      labels:
        app: messaging-app-blue
    spec:
      containers:
        - name: messaging-app
          image: messaging-app:latest
          ports:
            - containerPort: 8000
