messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app-green
  template:
    metadata:
      labels:
        app: messaging-app-green
    spec:
      containers:
        - name: messaging-app
          image: messaging-app:green  # new version tag
          ports:
            - containerPort: 8000
